# rosci_example_project

./: .gitignore  CMakeLists.txt  build.sh  example_project-config.cmake.in
app/example_app/: CMakeLists.txt  build.sh
